# ChangeLog for mail-mta/opensmtpd
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-mta/opensmtpd/ChangeLog,v 1.12 2013/05/18 17:50:49 zx2c4 Exp $

*opensmtpd-5.3.2_p1 (18 May 2013)

  18 May 2013; Jason A. Donenfeld <zx2c4@gentoo.org> +opensmtpd-5.3.2_p1.ebuild:
  Bump version.

  18 May 2013; Jason A. Donenfeld <zx2c4@gentoo.org>
  opensmtpd-5.3.1.201305171950_p1.ebuild, opensmtpd-5.3.1_p1.ebuild:
  Correct cvs issue.

  18 May 2013; Jason A. Donenfeld <zx2c4@gentoo.org>
  opensmtpd-5.3.1.201305171950_p1.ebuild:
  Add epatch_user for custom patches.

  18 May 2013; Jason A. Donenfeld <zx2c4@gentoo.org>
  opensmtpd-5.3.1.201305171950_p1.ebuild, opensmtpd-5.3.1_p1.ebuild:
  Basic QA on source folder.

*opensmtpd-5.3.1.201305171950_p1 (18 May 2013)

  18 May 2013; Jason A. Donenfeld <zx2c4@gentoo.org>
  +opensmtpd-5.3.1.201305171950_p1.ebuild, opensmtpd-5.3.1_p1.ebuild:
  Latest snapshot that fixes SSL DoS.

*opensmtpd-5.3.1_p1 (22 Apr 2013)

  22 Apr 2013; Jason A. Donenfeld <zx2c4@gentoo.org> +opensmtpd-5.3.1_p1.ebuild,
  -opensmtpd-5.3_p1.ebuild:
  Version bump.

  17 Mar 2013; Jason A. Donenfeld <zx2c4@gentoo.org> opensmtpd-5.3_p1.ebuild:
  Add optional sqlite support.

*opensmtpd-5.3_p1 (17 Mar 2013)

  17 Mar 2013; Jason A. Donenfeld <zx2c4@gentoo.org> +opensmtpd-5.3_p1.ebuild,
  -opensmtpd-9999.ebuild:
  First release of OpenSMTPD.

  01 Mar 2013; Jason A. Donenfeld <zx2c4@gentoo.org> -files/pam.patch,
  opensmtpd-9999.ebuild:
  PAM support merged upstream.

  28 Feb 2013; Jason A. Donenfeld <zx2c4@gentoo.org> files/smtpd.initd,
  opensmtpd-9999.ebuild:
  Fix AR and make init script be simpler.

  28 Feb 2013; Jason A. Donenfeld <zx2c4@gentoo.org> ChangeLog:
  zx2c4 is responsible for the PAM patch. ryao is responsible for the build
  warning patch.

*opensmtpd-9999 (28 Feb 2013)

  28 Feb 2013; Jason A. Donenfeld <zx2c4@gentoo.org>