@@ -1,6 +1,10 @@
 # ChangeLog for mail-mta/opensmtpd
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/opensmtpd/ChangeLog,v 1.12 2013/05/18 17:50:49 zx2c4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/opensmtpd/ChangeLog,v 1.13 2013/05/18 17:51:29 zx2c4 Exp $
+
+  18 May 2013; Jason A. Donenfeld <zx2c4@gentoo.org>
+  -opensmtpd-5.3.1.201305171950_p1.ebuild, -opensmtpd-5.3.1_p1.ebuild:
+  Remove old versions.
 
 *opensmtpd-5.3.2_p1 (18 May 2013)
 
